# AiModelViewControls

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  PROMOTION.md  README.md  citation.txt  setup_xcode.sh  tradesecret.sh
.github/: SECURITY.md
AgenticMVCclientCLI/: CMakeLists.txt
AgenticMVCclientCLI/include/: AgenticApp.hpp  IAgenticClient.hpp
AgenticMVCclientCLI/include/connectors/: HttpClientConnector.hpp  MockClientConnector.hpp
AgenticMVCclientCLI/include/core/: AlertDispatcher.hpp  IAlertHandler.hpp  IClientConnector.hpp  IPayloadFormatter.hpp  ISecurityScanner.hpp  ISessionState.hpp  SessionManager.hpp
AgenticMVCclientCLI/include/formatters/: FormatterPipeline.hpp  SpotlightFormatter.hpp  UserMarkdownFormatter.hpp
AgenticMVCclientCLI/include/security/: CognitiveHackingScanner.hpp  DlpScanner.hpp  IndirectInjectionScanner.hpp  MalwareScanner.hpp  ObfuscationScanner.hpp  PromptInjectionScanner.hpp  SecurityPipeline.hpp  SocialEngineeringScanner.hpp
AgenticMVCclientCLI/include/ui/: CliInteractor.hpp
AgenticMVCclientCLI/src/: AgenticApp.cpp  main.cpp
AgenticMVCclientCLI/src/connectors/: HttpClientConnector.cpp  MockClientConnector.cpp
AgenticMVCclientCLI/src/core/: AlertDispatcher.cpp  SessionManager.cpp
AgenticMVCclientCLI/src/formatters/: FormatterPipeline.cpp  SpotlightFormatter.cpp  UserMarkdownFormatter.cpp
AgenticMVCclientCLI/src/security/: CognitiveHackingScanner.cpp  DlpScanner.cpp  IndirectInjectionScanner.cpp  MalwareScanner.cpp  ObfuscationScanner.cpp  PromptInjectionScanner.cpp  SecurityPipeline.cpp  SocialEngineeringScanner.cpp
AgenticMVCclientCLI/src/ui/: CliInteractor.cpp
AgenticMVCserverCLI/: CMakeLists.txt
AgenticMVCserverCLI/include/: IAgenticCore.hpp
AgenticMVCserverCLI/src/: main.cpp
docker/: Dockerfile  docker-entrypoint.sh
help/: TROUBLESHOOTING.md
include/: AgenticConfigManager.hpp  AgenticEngine.hpp  AgenticServiceFactory.hpp  AgenticServices.hpp  AiModelViewControls.hpp  Controller.hpp  Crypto.hpp  IAgenticService.hpp  Ledger.hpp  McpServer.hpp  Model.hpp  Orchestrator.hpp  RouterEngine.hpp  SandboxManager.hpp  Security.hpp  ViewTUI.hpp  WebSocketSandbox.hpp  XWayland.hpp
include/cli/: CliClient.hpp
include/connectors/: ConnectorStrategies.hpp  IConnectorStrategy.hpp
include/docker/: DockerFacade.hpp
include/security/: ConcreteScanners.hpp  IDataLeakDetector.hpp  IMalwareScanner.hpp
include/states/: AgentStates.hpp  IAgentState.hpp
manual/: COMMANDS.md
src/: AgenticEngine.cpp  Controller.cpp  Crypto.cpp  Ledger.cpp  McpServer.cpp  Model.cpp  Orchestrator.cpp  RouterEngine.cpp  SandboxManager.cpp  Security.cpp  ViewTUI.cpp  WebSocketSandbox.cpp  XWayland.cpp  main.cpp
src/cli/: CliClient.cpp
src/connectors/: ConnectorStrategies.cpp  IConnectorStrategy.cpp
src/docker/: DockerFacade.cpp
tests/: test_agent.py  test_blockchain.py  test_ingress_security.py  test_leak_prevention.py  test_mcp_and_killswitch.py  test_node_connections.py  test_orchestrator_control.py  test_sandbox.py  test_security_suite.py  test_tokenization.py
www/: global.html  index.html
